--- a/styles.css
+++ b/styles.css
@@ -88,11 +88,31 @@ footer p {
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 100%;
+    width: 240px;
     padding: 8px;
     padding-bottom: 0;
     height: auto;
-    font-size: 1rem;
+    font-size: 1.32rem;
+}
+
+.fixed-4 {
+    width: 300px;
+}
+
+.fixed-7 {
+    width: 320px;
+}
+
+.fixed-9 {
+    width: 427px;
+}
+
+.fixed-10 {
+    width: 336px;
+}
+
+.fixed-11 {
+    width: 320px;
 }
 
 @media (max-width: 767px) {
@@ -124,11 +144,6 @@ footer p {
         font-size: 0;
         padding: 0;
     }
-
-    .picture-img {
-        display: block;
-        pointer-events: none;
-    }
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -155,10 +170,9 @@ footer p {
     }
 
     .picture-note {
-        width: 100%;
-        height: auto;
-        padding: 4px;
-        padding-bottom: 0;
-        font-size: 0.8rem;
+        width: 0px;
+        height: 0px;
+        font-size: 0;
+        padding: 0;
     }
 }
