--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ footer p {
 
 .gallery-title {
     font-size: 3.0rem;
-    color: #f5f5f5;
+    color: #333;
     margin: 0;
     padding: 0;
 }
@@ -83,38 +83,6 @@ footer p {
     height: auto;
 }
 
-.picture-note {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 240px;
-    padding: 8px;
-    padding-bottom: 0;
-    height: auto;
-    font-size: 1.32rem;
-}
-
-.fixed-4 {
-    width: 300px;
-}
-
-.fixed-7 {
-    width: 320px;
-}
-
-.fixed-9 {
-    width: 427px;
-}
-
-.fixed-10 {
-    width: 336px;
-}
-
-.fixed-11 {
-    width: 320px;
-}
-
 @media (max-width: 767px) {
     footer p {
         font-size: 0.8rem;
@@ -136,13 +104,6 @@ footer p {
     .picture-img-v {
         width: 80px;
         height: auto;
-    }
-
-    .picture-note {
-        width: 0px;
-        height: 0px;
-        font-size: 0;
-        padding: 0;
     }
 }
 
@@ -167,12 +128,5 @@ footer p {
     .picture-img-v {
         width: 160px;
         height: auto;
-    }
-
-    .picture-note {
-        width: 0px;
-        height: 0px;
-        font-size: 0;
-        padding: 0;
     }
 }
